src/components/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&display=swap');
@font-face {
  font-family: 'Grotta';
  src: url('/fonts/Grotta-Trial-Semibold.otf') format('opentype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Source Sans Pro';
  src: url('/fonts/source-sans-pro/SourceSansPro-ExtraLight.otf')
    format('opentype');
  font-weight: normal;
  font-style: normal;
}

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  font-family: 'Grotta', Arial, Helvetica, sans-serif;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

/* Hide scrollbar for Chrome, Safari and Opera */
.no-scrollbar::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.no-scrollbar {
  -ms-overflow-style: none;
  /* IE and Edge */
  scrollbar-width: none;
  /* Firefox */
}
.grid-container {
  display: grid;
  grid-template-columns: repeat(
    auto-fit,
    minmax(400px, 1fr)
  ); /* Adjusts between 1 and 3 columns */
  gap: 1rem; /* Add space between images */
}
.grid-container-big {
  display: grid;
  grid-template-columns: repeat(
    auto-fit,
    minmax(500px, 1fr)
  ); /* Adjusts between 1 and 3 columns */
  gap: 1rem; /* Add space between images */
}
.img-fit {
  width: 100%;
  height: 100%; /* or set fixed height */
  object-fit: cover; /* or 'contain', depending on how you want it to behave */
}
@media (min-width: 1000px) {
  .nav-dynamic-show {
    display: none;
  }
}
@media (max-width: 768px) {
  .grid-container {
    grid-template-columns: repeat(
      2,
      1fr
    ); /* Force 2 images per row on smaller screens */
  }
  .grid-container-big {
    max-height: 300px;
    overflow-y: scroll;
    grid-template-columns: repeat(
      2,
      1fr
    ); /* Force 2 images per row on smaller screens */
  }
  .dynamic-width {
    width: 100%;
  }
  .project-menu-category {
    min-width: 150px;
  }
}
@media (max-width: 1000px) {
  .nav-dynamic-hidden {
    display: none;
  }
}
@media (max-width: 1000px) {
  .nav-dynamic-hidden {
    display: none;
  }
}
.transition-width {
  transition: width 0.3s ease-in-out; /* Ensure the width transition is smooth */
}
@media (max-width: 480px) {
  .grid-container {
    max-height: 80vh;
    overflow-y: scroll;
    grid-template-columns: repeat(1, 1fr); /* Force 1 image per row on mobile */
  }
  .grid-container-big {
    grid-template-columns: repeat(1, 1fr); /* Force 1 image per row on mobile */
  }

  .dynamic-width {
    width: 100%;
  }
  .project-menu-category {
    min-width: 150px;
  }
}
.bg-gradient-home {
  @apply bg-gradient-to-r from-[#16322c] to-transparent;
}

